@@ -12,7 +12,8 @@ public enum MetricType {
   KILLAPP_ASSAULT("assault.killapp.count", false, true),
   APPLICATION_REQ_COUNT("application.request.count", false, true),
   MEMORY_ASSAULT("assault.memory.count", false, false),
-  MEMORY_ASSAULT_MEMORY_STOLEN("assault.memory.bytes_stolen", false, false);
+  MEMORY_ASSAULT_MEMORY_STOLEN("assault.memory.bytes_stolen", false, false),
+  CPU_ASSAULT("assault.cpu.count", false, false);
 
   private final String metricName;
 
